css/projects.css
div.project {
	height: 150px;
	border: 3px black solid;
	cursor: pointer;
	position: relative;
	overflow: hidden;

	margin-bottom: 15px;
}

div.project > div.projectBack {
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	z-index: -1;

	background-position: center;
	background-size: cover;

	opacity: .7;

	transition: .5s cubic-bezier(0, 0, 0, 1) transform;
}
div.project:hover > div.projectBack {
	opacity: .6;
	transform: scale(1.02);
}

div.project > div.projectTitle {
	position: absolute;
	bottom: 30px;
	left: 10px;
	font-size: 25px;
	padding: 5px;

	background-color: black;
	color: white;

	transform-origin: left center;
	transition: .5s cubic-bezier(0, 0, 0, 1) transform;
}
div.project:hover > .projectTitle {
	transform: scale(1.1);
}

